[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beda-core"
version = "1.0.0"
description = "BEDA Core - Modüler Yapay Zeka Motoru"
authors = [
    {name = "BEDA AI Team", email = "team@bedaai.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ai", "nlp", "machine-learning", "turkish", "cache", "redis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
    "redis>=4.0.0",
    "colorama>=0.4.6",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]

pytorch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0"
]

full = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/beda-ai/beda-core"
Documentation = "https://beda-core.readthedocs.io"
Repository = "https://github.com/beda-ai/beda-core.git"
Issues = "https://github.com/beda-ai/beda-core/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["beda_core*"]

[tool.setuptools.package-data]
beda_core = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"